force-app/main/default/objects/API_Resource_Endpoint__mdt/API_Resource_Endpoint__mdt.object-meta.xml
<CustomObject>
    <description>Stores the configuration for each endpoint</description>
    <label>API Resource Endpoint</label>
    <pluralLabel>API Resource Endpoints</pluralLabel>
</CustomObject>