force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>Content Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>