force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Relative/full path (e.g. /v1/accounts)</description>
    <inlineHelpText>Relative/full path (e.g. /v1/accounts)</inlineHelpText>
    <label>Endpoint</label>
    <type>TextArea</type>
</CustomField>