force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <type>TextArea</type>
</CustomField>