force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/ImplType__c.field-meta.xml
<CustomField>
    <fullName>ImplType__c</fullName>
    <description>REST, SOAP, MULTIPART, etc.</description>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
                <default>true</default>
                <label>REST</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>