force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>GET/POST/PUT/DELETE/PATCH</description>
    <inlineHelpText>GET/POST/PUT/DELETE/PATCH</inlineHelpText>
    <label>HTTP Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
                <label>GET</label>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>