force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <description>Named Credential developerName</description>
    <inlineHelpText>Named Credential developerName</inlineHelpText>
    <label>Named Credential</label>
    <type>TextArea</type>
</CustomField>