force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/RetryLimit__c.field-meta.xml
<CustomField>
    <fullName>RetryLimit__c</fullName>
    <description>Max retry attempts (integer)</description>
    <inlineHelpText>Max retry attempts (integer)</inlineHelpText>
    <label>Retry Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>