force-app/main/default/objects/API_Resource_Endpoint__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Timeout in milliseconds</description>
    <inlineHelpText>Timeout in milliseconds</inlineHelpText>
    <label>Timeout (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>