force-app/main/default/objects/API_Resource_Endpoint__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Endpoint__c</columns>
    <columns>Method__c</columns>
    <columns>NamedCredential__c</columns>
    <columns>Timeout__c</columns>
    <columns>RetryLimit__c</columns>
    <columns>ContentType__c</columns>
    <columns>ImplType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>